--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<img src="images/town_hall_logo.gif" atl="town hall logo" height="80">
 	<h2>San Joaquin Valley Town Hall</h2>
 	<h3>Celebrating our 75<sup>th</sup> Year</h3>
+	<link rel="stylesheet" href="styles/normalize.css">
+	<link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
