--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
 	<h3>Celebrating our <em class="shadow">75<sup>th</sup></em> Year</h3>
 </header>
 
+<ul id="nav_menu">
+	<li><a class="current" href="index.html" >Home</a> </li>
+	<li><a>Speakers</a> </li>
+	<li><a>Luncheons</a> </li>
+	<li><a href="#bottom">Tickets</a> </li>
+	<li><a>About Us</a>
+		<ul>
+			<li><a>Our History</a></li>
+			<li><a>Board of Directors</a></li>
+			<li><a>Past Speakers</a></li>
+			<li><a>Contact Information</a></li>
+		</ul>
+	</li>
+</ul>
+
 <main>
 	<section>
 	<h2>Our Mission</h2>
@@ -33,7 +48,7 @@
 
 			<p>What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number of countries in Africa.</p>
 
-			<p><a href="speakers/sampson.html">Read more.</a><b>Or meet us there!</b> </p>
+			<p><a href="speakers/sampson.html">Read more.</a> <a href="media/sampson.swf">Or play video.</a></p>
 		</article>
 	<h2>Our Ticket Packages</h2>
 
