--- a/speakers/sampson.html
+++ b/speakers/sampson.html
@@ -7,6 +7,7 @@
 	<link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" href="../styles/normalize.css">
 	<link rel="stylesheet" href="../styles/main.css">
+	<link rel="stylesheet" href="../styles/speakers.css">
 </head>
 
 <body>
@@ -15,6 +16,21 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+
+	<ul id="nav_menu">
+		<li><a class="current" href="../index.html" >Home</a> </li>
+		<li><a>Speakers</a> </li>
+		<li><a>Luncheons</a> </li>
+		<li><a>Tickets</a> </li>
+		<li><a>About Us</a>
+			<ul>
+				<li><a>Our History</a></li>
+				<li><a>Board of Directors</a></li>
+				<li><a>Past Speakers</a></li>
+				<li><a>Contact Information</a></li>
+			</ul>
+		</li>
+	</ul>
 
 	<main>
 		<section>
@@ -56,7 +72,6 @@
 			<img src="../images/chua75.jpg" alt="Amy Chua photo">
 			<h3>February<br><a href="../speakers/sampson.html">Scott Sampson</a></h3>
 			<img src="../images/sampson75.jpg" alt="Scott Sampson photo">
-			<h3><a href="../index.html">Return to Homepage</a></h3>
 		</aside>
 	</main>
 	<footer>
