--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<li><a class="current" href="index.html" >Home</a> </li>
 	<li><a>Speakers</a> </li>
 	<li><a>Luncheons</a> </li>
-	<li><a href="#bottom">Tickets</a> </li>
+	<li><a>Tickets</a> </li>
 	<li><a>About Us</a>
 		<ul>
 			<li><a>Our History</a></li>
